5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1616_2924.log
== TEST (2019-04-01 14:13:16) 
-- CODE:
So = float(input("posição inicial: "))
V = float(input("velocidade do movel: "))
t = float(input("intervalo de tempo: "))

s = so + v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = so + v*t
NameError: name 'so' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:14:15) 
-- CODE:
s0 = float(input("posição inicial: "))
v = float(input("velocidade do movel: "))
t = float(input("intervalo de tempo: "))

s = S0 + v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = S0 + v*t
NameError: name 'S0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:14:50) 
-- CODE:
s0 = float(input("posição inicial: "))
v = float(input("velocidade do movel: "))
t = int(input("intervalo de tempo: "))

s = S0 + v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = S0 + v*t
NameError: name 'S0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:14:56) 
-- CODE:
so = float(input("posição inicial: "))
v = float(input("velocidade do movel: "))
t = int(input("intervalo de tempo: "))

s = S0 + v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = S0 + v*t
NameError: name 'S0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:15:12) 
-- CODE:
S0 = float(input("posição inicial: "))
v = float(input("velocidade do movel: "))
t = int(input("intervalo de tempo: "))

s = S0 + v*t
print(s)
-- OUTPUT:
3002.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:17:17) 
-- CODE:
So = float(input("posição inicial do movel: "))
V = float(input("velocidade do movel: "))
T = int(input("intervalo de tempo: "))

s = So + v * t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = So + v * t
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:18:22) 
-- CODE:
s0 = float(input("posição inicial do movel: "))
V = float(input("velocidade do movel: "))
T = int(input("intervalo de tempo: "))

S = So + V * T
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    S = So + V * T
NameError: name 'So' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:18:52) 
-- CODE:
s0 = float(input("posição inicial do movel: "))
v = float(input("velocidade do movel: "))
t = int(input("intervalo de tempo: "))

s = So + v * t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = So + v * t
NameError: name 'So' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:19:12) 
-- CODE:
a = float(input("posição inicial do movel: "))
v = float(input("velocidade do movel: "))
t = int(input("intervalo de tempo: "))

s = a + v * t
print(s)
-- OUTPUT:
3002.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:20:10) 
-- CODE:
So = float(input("posição inicial do movel: "))
V = float(input("velocidade do movel: "))
T = int(input("intervalo de tempo: "))

s = So + V * t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = So + V * t
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:20:12) 
-- CODE:
So = float(input("posição inicial do movel: "))
V = float(input("velocidade do movel: "))
T = int(input("intervalo de tempo: "))

s = So + V * t
print(s)
-- EXECUTION TIME:
0.131078
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2924/main.py", line 5, in <module>
    s = So + V * t
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:20:56) 
-- CODE:
So = int(input("posição inicial do movel: "))
V = int(input("velocidade do movel: "))
T = int(input("intervalo de tempo: "))

s = So + V * t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = So + V * t
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:22:20) 
-- CODE:
si = float(input("posição inicial do movel: "))
v = float(input("velocidade do movel: "))
t = int(input("intervalo de tempo: "))

s = si + v*t
print(s)
-- OUTPUT:
3002.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:23:02) 
-- CODE:
si = float(input("posicao inicial: "))
v = float(input("velocidade do movel: "))
t = int(input("intervalo de tempo: "))

s = si + v*t
print(s)
-- OUTPUT:
3002.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:23:05) 
-- CODE:
si = float(input("posicao inicial: "))
v = float(input("velocidade do movel: "))
t = int(input("intervalo de tempo: "))

s = si + v*t
print(s)
-- EXECUTION TIME:
0.133381
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
3002.0
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
4252.0
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
3058.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
